i18n // jp: Further manual ameliorations.

--- a/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1275,7 +1275,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "GIGF は「原神専用ガチャ記録交換用規格」の略称であり、UIGF v3.0 までの全てのバージョンの統括名前であり、全て廃止済みである。廃止された規格に準じたファイルを読み込む機能は、「このアプリによって生成された」古いバックアップ ファイルを読み込むだけのためである。"
+            "value" : "GIGF は「原神専用ガチャ記録交換用規格」の略称であり、UIGF v3.0 までのすべてのバージョンの統括名前であり、全部廃止済みである。廃止された規格に準じたファイルを読み込む機能は、「このアプリによって生成された」古いバックアップ ファイルを読み込むだけのためである。"
           }
         },
         "ko" : {
@@ -2582,7 +2582,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全ての所有者"
+            "value" : "すべての所有者"
           }
         },
         "ko" : {
@@ -6729,7 +6729,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "タップしてこのガチャ主の全ての記録を削除"
+            "value" : "タップしてこのガチャ主の記録を全部削除"
           }
         },
         "ko" : {
@@ -6806,7 +6806,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "このガチャ主の全ての記録を削除する。続行するかどうかのご確認を。"
+            "value" : "このガチャ主の記録を全部削除する。続行するかどうかのご確認を。"
           }
         },
         "ko" : {
