--- a/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
+++ b/Packages/PZAboutKit/Sources/PZAboutKit/Resources/Localizable.xcstrings
@@ -5219,7 +5219,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "淘汰済み。全ての機能はすでに「ピザ助手（無印）」に搭載されておる。"
+            "value" : "淘汰済み。すべての機能はすでに「ピザ助手（無印）」に搭載されている。"
           }
         },
         "ko" : {
@@ -5371,7 +5371,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "淘汰済み。全ての機能はすでに「ピザ助手（無印）」に搭載されておる。"
+            "value" : "淘汰済み。すべての機能はすでに「ピザ助手（無印）」に搭載されている。"
           }
         },
         "ko" : {
