--- a/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
+++ b/Packages/PZHelper/Sources/PZHelper/Resources/Localizable.xcstrings
@@ -5433,7 +5433,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのプロファイルは無事でここで１つ統合ファイルとして書き出しました:"
+            "value" : "すべてのプロファイルは無事でここで１つ統合ファイルとして書き出しました:"
           }
         },
         "ko" : {
@@ -5510,7 +5510,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのプロファイルを統合して書き出す"
+            "value" : "すべてのプロファイルを統合して書き出す"
           }
         },
         "ko" : {
@@ -5587,7 +5587,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのプロファイルは無事で書き出しました。"
+            "value" : "すべてのプロファイルは無事で書き出しました。"
           }
         },
         "ko" : {
@@ -9116,7 +9116,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "この端末の全てのプロファイルをペアリング済みのApple Watchに押し込む"
+            "value" : "この端末のすべてのプロファイルをペアリング済みのApple Watchに押し込む"
           }
         },
         "ko" : {
@@ -14448,7 +14448,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "このアカウントのこれらのゲームの全てのUIDを一気に読み込む"
+            "value" : "このアカウントのこれらのゲームのすべてのUIDを一気に読み込む"
           }
         },
         "ko" : {
