--- a/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
+++ b/Packages/PZHoYoLabKit/Sources/PZHoYoLabKit/Resources/Localizable.xcstrings
@@ -3195,7 +3195,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのキャラクター"
+            "value" : "すべてのキャラクター"
           }
         },
         "ko" : {
