--- a/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
+++ b/Packages/WallpaperKit/Sources/WallpaperConfigKit/Resources/Localizable.xcstrings
@@ -1187,7 +1187,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのユーザー壁紙は無事でここで１つ統合ファイルとして書き出しました:"
+            "value" : "すべてのユーザー壁紙は無事でここで１つ統合ファイルとして書き出しました:"
           }
         },
         "ko" : {
@@ -1264,7 +1264,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのユーザー壁紙を統合して書き出す"
+            "value" : "すべてのユーザー壁紙を統合して書き出す"
           }
         },
         "ko" : {
@@ -1341,7 +1341,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全てのユーザー壁紙は無事で書き出しました。"
+            "value" : "すべてのユーザー壁紙は無事で書き出しました。"
           }
         },
         "ko" : {
