--- a/WidgetExtension/Localizable.xcstrings
+++ b/WidgetExtension/Localizable.xcstrings
@@ -3775,7 +3775,7 @@
         "ja" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "全ての情報、一目で把握"
+            "value" : "すべての情報、一目で把握"
           }
         },
         "ko" : {
