--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Source Contents/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ko.xcloc/Source Contents/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1484,13 +1484,13 @@
         }
       }
     },
-    "gachaKit.stats.standardItemEvasionRate" : {
+    "gachaKit.stats.standardItemHitRate" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Standard Evasion Rate"
+            "value" : "Standard Hit Rate"
           }
         }
       }
