--- a/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Localized Contents/en.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/en.xcloc/Localized Contents/en.xliff
@@ -1208,9 +1208,9 @@ Empty selection indicates selecting all gacha pullers.</target>
         <target state="translated">Interknot Appraisement</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.stats.avaragePulls4LimitedPentaStars" xml:space="preserve">
-        <source>Avrg. Pulls (limited ★5)</source>
-        <target state="translated">Avrg. Pulls (limited ★5)</target>
+      <trans-unit id="gachaKit.stats.avaragePulls4NonStandardPentaStars" xml:space="preserve">
+        <source>Avrg. Pulls (Non-Std. ★5)</source>
+        <target state="translated">Avrg. Pulls (Non-Std. ★5)</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.stats.avaragePulls4PentaStars" xml:space="preserve">
