--- a/_i18n_xliff/UnitedPizzaHelper Localizations/ja.xcloc/Source Contents/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/ja.xcloc/Source Contents/Packages/GachaKit/Sources/GachaKit/Resources/Localizable.xcstrings
@@ -1440,13 +1440,13 @@
         }
       }
     },
-    "gachaKit.stats.avaragePulls4LimitedPentaStars" : {
+    "gachaKit.stats.avaragePulls4NonStandardPentaStars" : {
       "extractionState" : "manual",
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Avrg. Pulls (limited ★5)"
+            "value" : "Avrg. Pulls (Non-Std. ★5)"
           }
         }
       }
