--- a/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hans.xcloc/Localized Contents/zh-Hans.xliff
+++ b/_i18n_xliff/UnitedPizzaHelper Localizations/zh-Hans.xcloc/Localized Contents/zh-Hans.xliff
@@ -1201,9 +1201,9 @@ Empty selection indicates selecting all gacha pullers.</source>
         <target state="translated">绳网评价</target>
         <note/>
       </trans-unit>
-      <trans-unit id="gachaKit.stats.avaragePulls4LimitedPentaStars" xml:space="preserve">
-        <source>Avrg. Pulls (limited ★5)</source>
-        <target state="translated">限定五星平均抽数</target>
+      <trans-unit id="gachaKit.stats.avaragePulls4NonStandardPentaStars" xml:space="preserve">
+        <source>Avrg. Pulls (Non-Std. ★5)</source>
+        <target state="translated">非常驻五星平均抽数</target>
         <note/>
       </trans-unit>
       <trans-unit id="gachaKit.stats.avaragePulls4PentaStars" xml:space="preserve">
